idea/testData/multiModuleLineMarker/fromExpectedTypeAlias/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>TypeAlias<!> {
    val x: String
}